fix: fixed home css spacing

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -39,7 +39,7 @@
   font-size: 2rem;
   line-height: 1.4;
   margin-bottom: 0px;
-  margin-top: -1.2rem;
+  margin-top: -1.4rem;
 }
 
 .headingLg {
